--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -55,6 +55,8 @@ services:
     volumes:
       - db_home:/var/lib/postgresql/data
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    ports:
+      - 5432:5432
 
   superset:
     env_file:
