--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -116,7 +116,7 @@
     "@superset-ui/plugin-chart-table": "file:./plugins/plugin-chart-table",
     "@superset-ui/plugin-chart-word-cloud": "file:./plugins/plugin-chart-word-cloud",
     "@superset-ui/switchboard": "file:./packages/superset-ui-switchboard",
-    "superset-plugin-chart-page": "^0.2.1", 
+    "superset-plugin-chart-page": "file:./plugins/superset-plugin-chart-page", 
     "@types/d3-format": "^3.0.1",
     "@types/d3-time-format": "^4.0.3",
     "@visx/axis": "^3.8.0",
